添加一些图片

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
-    <title>Loading... | SyngenTech</title>
-    <meta name="keywords" content="SyngenTech, Biopharma, 合生基因, 合成生物学, 创新生物药" />
-    <meta name="description" content="Exploring the Power of Life. Enabling Biomedical Innovation with Synthetic Biological Technology. 探索生命的力量。用合成生物学技术赋能生物医药创新。" />
+    <title>加载中... | 荷塘生华 </title>
+    <meta name="keywords" content="荷塘生华" />
+    <meta name="description" content="荷塘生华" />
   </head>
   <body>
     <style>
